src/test/resources/refCompilerOutput/invalid/syntaxErr/function/badlyPlaced.waccast
-- Compiling...
Errors detected during compilation! Exit code 100 returned.
Syntactic Error at 11:0 -- missing 'begin' at 'int'
Syntactic Error at 18:0 -- missing 'end' at '<EOF>'
2 parser error(s) detected, no further compilation attempted.
